<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".DonateFragment">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        android:text="@string/textView_donate"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/TextView"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--
    <TextView
        android:id="@+id/donate_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="30dp"
        android:textSize="@dimen/EditText_size"
        android:textColor="#000000"
        android:hint="Name"
        android:text="Sehyog - ek Pehel "
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/upi_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"

        android:hint="Enter UPI ID"
        android:text="SehyogEkPehel@okaxis"
        android:textSize="@dimen/EditText_size"
        android:textColor="#000000"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donate_name" />
    -->

    <EditText
        android:id="@+id/donate_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="30dp"
        android:hint="Name"
        android:text="Sehyog - ek Pehel "
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/upi_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter UPI ID"
        android:text="SehyogEkPehel@okaxis"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donate_name" />

    <EditText
        android:id="@+id/donate_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="@string/editText_donate_hint"
        android:inputType="number"
        android:textSize="@dimen/EditText_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upi_id" />

    <EditText
        android:id="@+id/note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="Your Message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donate_amount" />

    <Button
        android:id="@+id/buttonPay"
        android:layout_width="@dimen/Button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/users_bg"
        android:text="@string/button_pay"
        android:textColor="@color/colorNew"
        android:textSize="@dimen/Button_Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/note" />

    <!--<Button
        android:id="@+id/buttonC"
        android:layout_width="@dimen/Button_width"
        android:layout_height="wrap_content"
        android:background="@drawable/users_bg"
        android:text="@string/Button_credit"
        android:textColor="@color/colorNew"
        android:textSize="@dimen/Button_Text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.518" />

    <Button
        android:id="@+id/buttonD"
        android:layout_width="@dimen/Button_width"
        android:layout_height="wrap_content"
        android:background="@drawable/users_bg"
        android:text="@string/Button_debit"
        android:textColor="@color/colorNew"
        android:textSize="@dimen/Button_Text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.705" />-->
</androidx.constraintlayout.widget.ConstraintLayout>